fable/test/valid/add_reals.f
      program prog
      c=a+b
      end
