fable/test/syntax_error/x_assign_1ex.f
      program prog
      x = 1ex
      end
